public/css/search.css
html, body {
	padding-top: 20px;
	height: 100%;
	
}

body {
	/*overflow-x: hidden;
	overflow-y: scroll;*/
	font-size: 1.2em;
}

a{text-decoration: none}
a:focus, a:hover {

text-decoration: none;
}

.withsearch {
	width:1px;
	height:0px;
	background: #f1f1f1;
	position: absolute;
	overflow:auto;
	z-index: 1031; /*more than nav bar*/
	-webkit-transform-origin: 100% 0;
	transform-origin: 100% 0;
	-webkit-transition-property: min-height, width, top, right;
	transition-property: min-height, width, top, right;
	-webkit-transition-duration: 0.5s;
	transition-duration: 0.3s;
	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
}

.withsearch.open {
	display:block;
	width: 100%;
	min-height: 100%;
	top: 0px;
	right: 0px;
	position:fixed;
}

.withsearch-form {
	width: 100%;
	height: 40px;
	margin: 0 auto;
	position: relative;
	-webkit-transition-property: width, height, -webkit-transform;
	transition-property: width, height, transform;
	-webkit-transition-duration: 0.5s;
	transition-duration: 0.5s;
	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
}

.withsearch.open .withsearch-form {
	width: 80%;
	height: 160px;
	-webkit-transform: translate3d(0,3em,0);
	transform: translate3d(0,3em,0);
}

.withsearch-input {
	width: 95%;
	height: 100%;
	padding: 0 10% 0 10px;
	font-weight: 500;
	border: none;
	background: transparent;
	font-size: 0.8em;
	color: black;
	-webkit-transition: font-size 0.5s cubic-bezier(0.7,0,0.3,1);
	transition: font-size 0.5s cubic-bezier(0.7,0,0.3,1);
}

.withsearch-input::-ms-clear { /* remove cross in IE */
    display: none;
}

.autocomplete-suggestions-extra {
	font-size: 12pt;
	padding-top: 9pt;
}
.autocomplete-suggestion-extra {
	background: #F0F8FF;
	cursor: default;
}

.autocomplete-suggestion-extra:hover {
	background: #bbbbbb;
}

.withsearch.hideInput .withsearch-input {
	color: transparent;
	-webkit-transition: color 0.3s;
	transition: color 0.3s;
}

.withsearch.open .withsearch-input {
	font-size: 7em;
}

/* placeholder */
.withsearch-input::-webkit-input-placeholder {
	color: #c2c2c2;
}

.withsearch-input:-moz-placeholder {
	color: #c2c2c2;
}

.withsearch-input::-moz-placeholder {
	color: #c2c2c2;
}

.withsearch-input:-ms-input-placeholder {
	color: #c2c2c2;
}

/* hide placeholder when active in Chrome */
.gn-search:focus::-webkit-input-placeholder {
	color: transparent;
}

input[type="search"] { /* reset normalize */
	-webkit-box-sizing: border-box; 
	box-sizing: border-box;	
}

.withsearch-input:focus,
.withsearch-submit:focus {
	outline: none;
}

.withsearch-submit {
	position: absolute;
	width: 80px;
	height: 80px;
	text-indent: 100px;
	overflow: hidden;
	right: 0;
	top: 50%;
	background: transparent url(../images/magnifier.svg) no-repeat center center;
	background-size: 100%;
	border: none;
	pointer-events: none;
	transform-origin: 50% 50%;
	opacity: 0;
	-webkit-transform: translate3d(-30px,-50%,0) scale3d(0,0,1);
	transform: translate3d(-30px,-50%,0) scale3d(0,0,1);
}

.withsearch-submit:hover{
	background: transparent url(../images/magnifierblack.png) no-repeat center center;
    background-size: 100%;
	}

.withsearch.open .withsearch-submit {
	pointer-events: auto;
	opacity: 1;
	-webkit-transform: translate3d(-30px,-50%,0) scale3d(1,1,1);
	transform: translate3d(-30px,-50%,0) scale3d(1,1,1);
	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
	transition: opacity 0.3s, transform 0.3s;
	-webkit-transition-delay: 0.5s;
	transition-delay: 0.5s;
}

.withsearch-close {
	width: 36px;
	height: 36px;
	position: absolute;
	right: 1em;
	top: 1em;
	overflow: hidden;
	text-indent: 100%;
	cursor: pointer;
	pointer-events: none;
	opacity: 0;
	/*-webkit-transform: scale3d(0,0,1);
	transform: scale3d(0,0,1);*/
}

.withsearch-view {
	font-size: 30px;
	height: 40px;
	position: absolute;
	cursor: pointer;
	display: inline-block;
	overflow: hidden;
	top: 80%;
	right: 5%;
	padding:0 10px;
	
}

.withsearch.open .withsearch-close {
	opacity: 1;
	pointer-events: auto;
/*	-webkit-transform: scale3d(1,1,1);
	transform: scale3d(1,1,1);
	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
	transition: opacity 0.3s, transform 0.3s;
	-webkit-transition-delay: 0.5s;
	transition-delay: 0.5s;*/
}

.withsearch-close::before,
.withsearch-close::after {
	content: '';
	position: absolute;
	width: 2px;
	height: 100%;
	top: 0;
	left: 50%;
	border-radius: 3px;
	opacity: 0.2;
	background: #000;
}

.withsearch-close:hover.withsearch-close::before,
.withsearch-close:hover.withsearch-close::after {
	opacity: 1;
}

.withsearch-close::before {
	-webkit-transform: rotate(45deg);
	transform: rotate(45deg);
}

.withsearch-close::after {
	-webkit-transform: rotate(-45deg);
	transform: rotate(-45deg);
}

.withsearch-content {
	color: #333;
	margin-top: 2.5em;
	width: 100%;
	height: 0;
	/*overflow: scroll;*/
	background: #f1f1f1;
	/*position: absolute;*/
	opacity: 0;
}

.scrollable{
	
	width: 2200px;
    display:table;
   overflow-y: auto;   overflow-x: scroll;
    margin: 0 auto;
            
}

.withsearch-content p{
	padding:3em;
}

.withsearch.open .withsearch-content {
	opacity: 1;
	height: auto;
	overflow-y: visible; /* this breaks the transition of the children in FF: https://bugzilla.mozilla.org/show_bug.cgi?id=625289 */
	pointer-events: auto;
	-webkit-transition: opacity 0.3s 0.5s;
	transition: opacity 0.3s 0.5s;
}

.dummy-column {
	margin-left:3em;
	width: 300px;
	padding: 0 0 6em;
	float: left;
	opacity: 0;
	-webkit-transform: translate3d(0,100px,0);
	transform: translateY(100px);
	-webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
	transition: transform 0.5s, opacity 0.5s;
}

.withsearch.open .dummy-column:first-child {
	-webkit-transition-delay: 0.4s;
	transition-delay: 0.4s;
}

.withsearch.open .dummy-column:nth-child(2) {
	-webkit-transition-delay: 0.45s;
	transition-delay: 0.45s;
}

.withsearch.open .dummy-column:nth-child(3) {
	-webkit-transition-delay: 0.5s;
	transition-delay: 0.5s;
}

.withsearch.open .dummy-column {
	opacity: 1;
	-webkit-transform: translate3d(0,0,0);
	transform: translate3d(0,0,0);
}

.dummy-column:nth-child(n) {
	margin: 0 1em;
}

.dummy-column h2 {
	font-size: 1.2em;
	letter-spacing: 1px;
	text-transform: uppercase;
	font-weight: 500;
	color: #c2c2c2;
	padding: 0.5em 0;
}

.dummy-column h2 span{
	text-transform: none;
	
}

.round {
	border-radius: 50%;
}

.dummy-media-object {
	display: block;
	margin: 0.3em 0;
	cursor: pointer;
	border-radius: 5px;
	background: rgba(118,117,128,0.05);
}

.dummy-media-object:hover,
.dummy-media-object:focus {
	background: rgba(118,117,128,0.1);
}

.dummy-media-object img {
	display: inline-block;
	width: 50px;	
	margin: 0 10px 0 0;
	vertical-align: middle;
}

.dummy-media-object span {
	vertical-align: middle;
	font-size: 1.0em;
	display: inline-block;
	font-weight: 200;
	margin: 0 0 0 0;
	width: calc(100% - 70px);
	color: rgba(0, 0, 0, 0.52);
	word-wrap:break-word;
}

.dummy-media-object:hover span {
	color: rgba(236,90,98,1);
	text-decoration: none !important
}



/* Overlay */
.overlay {
	position: fixed;
	
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow: scroll;
	background: rgba(0,0,0,0.5);
	opacity: 0;
	pointer-events: none;
	-webkit-transition: opacity 0.5s;
	transition: opacity 0.5s;
	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
}

.withsearch.open .overlay {
	opacity: 1;
}

.masonryitem{
	width: 200px; 
	float:left;
}


#columns {

column-gap: 15px;
width: 90%;
/*
max-width: 1500px;*/
margin: 50px auto;
}

div#columns figure {
opacity:0;
background: #fefefe;
border: 2px solid #fcfcfc;
box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
margin: 0 2px 10px;

padding: 15px; 
padding-bottom: 10px;
/*transition: opacity .4s ease-in-out;*/
column-break-inside: avoid;


}
div#columns figure img {
width: 100%; height: auto;
border-bottom: 1px solid #ccc;
padding-bottom: 15px;
margin-bottom: 5px;
}

.fa-th-large{
	color:rgba(0, 0, 0, 0.16);
}

.fa-th-large:hover{
	color:black;
}

.fa-external-link:hover {
  color: black;
}

.fa-external-link {
  color:rgba(0, 0, 0, 0.16);
}


.withsearch-console{
font-size: 15px;
  height: 20px;
  position: absolute;
  cursor: pointer;
  display: inline-block;
  overflow: hidden;
  top: 50;
  right: 5%;
  padding: 0 10px;}

#more{
	 bottom:40px;
	 right:40px;
	 padding: 5px;
     position: fixed;
     z-index:1032;
	    }


#withsearch-content-masonry {
    width: 100%;
    margin: 0 auto;
    font-weight:200;
    color:rgba(0, 0, 0, 0.52);
}
 
/*Media Queries*/
@media only screen and (max-width : 1199px),
only screen and (max-device-width : 1199px){
    #withsearch-content-masonry {
        width: 1199px;
    }
}
 
 
@media only screen and (max-width : 999px),
only screen and (max-device-width : 999px){
    #withsearch-content-masonry {
        width: 800px;
    }
}
 
@media only screen and (max-width : 799px),
only screen and (max-device-width : 799px){
    #withsearch-content-masonry{
        width: 600px;
    }
}
 
@media only screen and (max-width : 599px),
only screen and (max-device-width : 599px){
    #withsearch-content-masonry {
        width: 400px;
    }
}
 
@media only screen and (max-width : 399px),
only screen and (max-device-width : 399px){
    #withsearch-content-masonry {
        width: 200px;
    }
}




@media screen and (max-width: 53.125em) {
	.withsearch-input {
		padding: 0 25% 0 10px;
	}
	.withsearch.open .withsearch-input {
		font-size: 2em;
	}
	.dummy-column {
		float: left;
		width: 300px;
		padding: 2em;
	}
	.dummy-column:nth-child(2) {
		margin: 0;
	}
	.withsearch.open .withsearch-submit {
		-webkit-transform: translate3d(0,-50%,0) scale3d(0.5,0.5,1);
		transform: translate3d(0,-50%,0) scale3d(0.5,0.5,1);
	}
}

@media screen and (max-width: 60.625em) {
	.withsearch {
		width: 80%;
		top: 10%;
		right: 10%;
	}
}

